@@ -2,7 +2,7 @@
  *
  * Pentaho Data Integration
  *
- * Copyright (C) 2002-2017 by Hitachi Vantara : http://www.pentaho.com
+ * Copyright (C) 2002-2024 by Hitachi Vantara : http://www.pentaho.com
  *
  *******************************************************************************
  *
@@ -22,31 +22,11 @@
 
 package org.pentaho.di.trans.steps.univariatestats;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
-import static org.mockito.Matchers.any;
-import static org.mockito.Mockito.doAnswer;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
-
-import java.io.IOException;
-import java.text.NumberFormat;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Random;
-import java.util.UUID;
-import java.util.concurrent.atomic.AtomicBoolean;
-
 import org.apache.commons.io.IOUtils;
 import org.junit.ClassRule;
 import org.junit.Test;
-import org.mockito.invocation.InvocationOnMock;
 import org.mockito.stubbing.Answer;
 import org.pentaho.di.core.CheckResultInterface;
-import org.pentaho.di.core.database.DatabaseMeta;
 import org.pentaho.di.core.exception.KettleException;
 import org.pentaho.di.core.exception.KettleStepException;
 import org.pentaho.di.core.exception.KettleXMLException;
@@ -65,11 +45,30 @@ import org.pentaho.di.trans.steps.loadsave.validator.ArrayLoadSaveValidator;
 import org.pentaho.di.trans.steps.loadsave.validator.FieldLoadSaveValidator;
 import org.pentaho.metastore.api.IMetaStore;
 
+import java.io.IOException;
+import java.text.NumberFormat;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Random;
+import java.util.UUID;
+import java.util.concurrent.atomic.AtomicBoolean;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertSame;
+import static org.junit.Assert.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.doAnswer;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
+
 public class UnivariateStatsMetaTest {
   @ClassRule public static RestorePDIEngineEnvironment env = new RestorePDIEngineEnvironment();
 
   private final FieldLoadSaveValidator<UnivariateStatsMetaFunction> univariateFunctionFieldLoadSaveValidator =
-    new FieldLoadSaveValidator<UnivariateStatsMetaFunction>() {
+    new FieldLoadSaveValidator<>() {
       final Random random = new Random();
 
       @Override
@@ -80,19 +79,19 @@ public class UnivariateStatsMetaTest {
       @Override
       public UnivariateStatsMetaFunction getTestObject() {
         return new UnivariateStatsMetaFunction( UUID.randomUUID().toString(), random.nextBoolean(), random
-            .nextBoolean(), random.nextBoolean(), random.nextBoolean(), random.nextBoolean(), random.nextBoolean(),
-            random.nextDouble(), random.nextBoolean() );
+          .nextBoolean(), random.nextBoolean(), random.nextBoolean(), random.nextBoolean(), random.nextBoolean(),
+          random.nextDouble(), random.nextBoolean() );
       }
     };
   private final ArrayLoadSaveValidator<UnivariateStatsMetaFunction> univariateFunctionArrayFieldLoadSaveValidator =
-      new ArrayLoadSaveValidator<UnivariateStatsMetaFunction>( univariateFunctionFieldLoadSaveValidator );
+    new ArrayLoadSaveValidator<>( univariateFunctionFieldLoadSaveValidator );
 
   @Test
   public void testGetAndSetSetInputFieldMetaFunctions() {
     UnivariateStatsMetaFunction[] stats = new UnivariateStatsMetaFunction[3];
     UnivariateStatsMeta meta = new UnivariateStatsMeta();
     meta.setInputFieldMetaFunctions( stats );
-    assertTrue( stats == meta.getInputFieldMetaFunctions() );
+    assertSame( stats, meta.getInputFieldMetaFunctions() );
   }
 
   @Test
@@ -109,36 +108,36 @@ public class UnivariateStatsMetaTest {
             "org/pentaho/di/trans/steps/univariatestats/legacyUnivariateStatsMetaTest.xml" ) );
     IMetaStore mockMetaStore = mock( IMetaStore.class );
     UnivariateStatsMeta meta = new UnivariateStatsMeta();
-    meta.loadXML( XMLHandler.loadXMLString( legacyXml ).getFirstChild(), new ArrayList<DatabaseMeta>(), mockMetaStore );
+    meta.loadXML( XMLHandler.loadXMLString( legacyXml ).getFirstChild(), new ArrayList<>(), mockMetaStore );
     assertEquals( 2, meta.getNumFieldsToProcess() );
     UnivariateStatsMetaFunction first = meta.getInputFieldMetaFunctions()[0];
     assertEquals( "a", first.getSourceFieldName() );
-    assertEquals( true, first.getCalcN() );
-    assertEquals( true, first.getCalcMean() );
-    assertEquals( true, first.getCalcStdDev() );
-    assertEquals( true, first.getCalcMin() );
-    assertEquals( true, first.getCalcMax() );
-    assertEquals( true, first.getCalcMedian() );
+    assertTrue( first.getCalcN() );
+    assertTrue( first.getCalcMean() );
+    assertTrue( first.getCalcStdDev() );
+    assertTrue( first.getCalcMin() );
+    assertTrue( first.getCalcMax() );
+    assertTrue( first.getCalcMedian() );
     assertEquals( .5, first.getCalcPercentile(), 0 );
-    assertEquals( true, first.getInterpolatePercentile() );
+    assertTrue( first.getInterpolatePercentile() );
     UnivariateStatsMetaFunction second = meta.getInputFieldMetaFunctions()[1];
     assertEquals( "b", second.getSourceFieldName() );
-    assertEquals( false, second.getCalcN() );
-    assertEquals( false, second.getCalcMean() );
-    assertEquals( false, second.getCalcStdDev() );
-    assertEquals( false, second.getCalcMin() );
-    assertEquals( false, second.getCalcMax() );
-    assertEquals( false, second.getCalcMedian() );
+    assertFalse( second.getCalcN() );
+    assertFalse( second.getCalcMean() );
+    assertFalse( second.getCalcStdDev() );
+    assertFalse( second.getCalcMin() );
+    assertFalse( second.getCalcMax() );
+    assertFalse( second.getCalcMedian() );
     assertEquals( -1.0, second.getCalcPercentile(), 0 );
-    assertEquals( false, second.getInterpolatePercentile() );
+    assertFalse( second.getInterpolatePercentile() );
   }
 
   @Test
   public void loadSaveRoundTripTest() throws KettleException {
-    List<String> attributes = Arrays.asList( "inputFieldMetaFunctions" );
+    List<String> attributes = List.of( "inputFieldMetaFunctions" );
 
     Map<String, FieldLoadSaveValidator<?>> fieldLoadSaveValidatorTypeMap =
-        new HashMap<String, FieldLoadSaveValidator<?>>();
+      new HashMap<>();
 
     fieldLoadSaveValidatorTypeMap.put( UnivariateStatsMetaFunction[].class.getCanonicalName(),
         univariateFunctionArrayFieldLoadSaveValidator );
@@ -153,8 +152,8 @@ public class UnivariateStatsMetaTest {
 
   private void assertContains( Map<String, Integer> map, String key, Integer value ) {
     assertTrue( "Expected map to contain " + key, map.containsKey( key ) );
-    assertTrue( "Expected key of " + key + " to be of type " + ValueMetaBase.getTypeDesc( value ),
-        map.get( key ) == value );
+    assertSame( "Expected key of " + key + " to be of type " + ValueMetaBase.getTypeDesc( value ), map.get( key ),
+      value );
   }
 
   @Test
@@ -164,28 +163,20 @@ public class UnivariateStatsMetaTest {
     meta.setInputFieldMetaFunctions( functions );
     RowMetaInterface mockRowMetaInterface = mock( RowMetaInterface.class );
     final AtomicBoolean clearCalled = new AtomicBoolean( false );
-    final List<ValueMetaInterface> valueMetaInterfaces = new ArrayList<ValueMetaInterface>();
-    doAnswer( new Answer<Void>() {
-
-      @Override
-      public Void answer( InvocationOnMock invocation ) throws Throwable {
-        clearCalled.set( true );
-        return null;
-      }
+    final List<ValueMetaInterface> valueMetaInterfaces = new ArrayList<>();
+    doAnswer( (Answer<Void>) invocation -> {
+      clearCalled.set( true );
+      return null;
     } ).when( mockRowMetaInterface ).clear();
-    doAnswer( new Answer<Void>() {
-
-      @Override
-      public Void answer( InvocationOnMock invocation ) throws Throwable {
-        if ( !clearCalled.get() ) {
-          throw new RuntimeException( "Clear not called before adding value metas" );
-        }
-        valueMetaInterfaces.add( (ValueMetaInterface) invocation.getArguments()[0] );
-        return null;
+    doAnswer( (Answer<Void>) invocation -> {
+      if ( !clearCalled.get() ) {
+        throw new RuntimeException( "Clear not called before adding value metas" );
       }
+      valueMetaInterfaces.add( (ValueMetaInterface) invocation.getArguments()[0] );
+      return null;
     } ).when( mockRowMetaInterface ).addValueMeta( any( ValueMetaInterface.class ) );
     meta.getFields( mockRowMetaInterface, null, null, null, null, null, null );
-    Map<String, Integer> valueMetas = new HashMap<String, Integer>();
+    Map<String, Integer> valueMetas = new HashMap<>();
     for ( ValueMetaInterface vmi : valueMetaInterfaces ) {
       valueMetas.put( vmi.getName(), vmi.getType() );
     }
@@ -221,7 +212,7 @@ public class UnivariateStatsMetaTest {
   @Test
   public void testCheckNullPrev() {
     UnivariateStatsMeta meta = new UnivariateStatsMeta();
-    List<CheckResultInterface> remarks = new ArrayList<CheckResultInterface>();
+    List<CheckResultInterface> remarks = new ArrayList<>();
     meta.check( remarks, null, null, null, new String[0], null, null, null, null, null );
     assertEquals( 2, remarks.size() );
     assertEquals( "Not receiving any fields from previous steps!", remarks.get( 0 ).getText() );
@@ -232,7 +223,7 @@ public class UnivariateStatsMetaTest {
     UnivariateStatsMeta meta = new UnivariateStatsMeta();
     RowMetaInterface mockRowMetaInterface = mock( RowMetaInterface.class );
     when( mockRowMetaInterface.size() ).thenReturn( 0 );
-    List<CheckResultInterface> remarks = new ArrayList<CheckResultInterface>();
+    List<CheckResultInterface> remarks = new ArrayList<>();
     meta.check( remarks, null, null, mockRowMetaInterface, new String[0], null, null, null, null, null );
     assertEquals( 2, remarks.size() );
     assertEquals( "Not receiving any fields from previous steps!", remarks.get( 0 ).getText() );
@@ -243,7 +234,7 @@ public class UnivariateStatsMetaTest {
     UnivariateStatsMeta meta = new UnivariateStatsMeta();
     RowMetaInterface mockRowMetaInterface = mock( RowMetaInterface.class );
     when( mockRowMetaInterface.size() ).thenReturn( 500 );
-    List<CheckResultInterface> remarks = new ArrayList<CheckResultInterface>();
+    List<CheckResultInterface> remarks = new ArrayList<>();
     meta.check( remarks, null, null, mockRowMetaInterface, new String[0], null, null, null, null, null );
     assertEquals( 2, remarks.size() );
     assertEquals( "Step is connected to previous one, receiving " + 500 + " fields", remarks.get( 0 ).getText() );
@@ -252,7 +243,7 @@ public class UnivariateStatsMetaTest {
   @Test
   public void testCheckWithInput() {
     UnivariateStatsMeta meta = new UnivariateStatsMeta();
-    List<CheckResultInterface> remarks = new ArrayList<CheckResultInterface>();
+    List<CheckResultInterface> remarks = new ArrayList<>();
     meta.check( remarks, null, null, null, new String[1], null, null, null, null, null );
     assertEquals( 2, remarks.size() );
     assertEquals( "Step is receiving info from other steps.", remarks.get( 1 ).getText() );
@@ -261,7 +252,7 @@ public class UnivariateStatsMetaTest {
   @Test
   public void testCheckWithoutInput() {
     UnivariateStatsMeta meta = new UnivariateStatsMeta();
-    List<CheckResultInterface> remarks = new ArrayList<CheckResultInterface>();
+    List<CheckResultInterface> remarks = new ArrayList<>();
     meta.check( remarks, null, null, null, new String[0], null, null, null, null, null );
     assertEquals( 2, remarks.size() );
     assertEquals( "No input received from other steps!", remarks.get( 1 ).getText() );
